--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,3 +1,15 @@
 <h2>Car List</h2>
 
 <div *ngFor="let car of cars">{{ car.name }}</div>
+
+<mat-card>
+  <mat-title>Car List</mat-title>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item *ngFor="let car of cars">
+        <img mat-list-avatar src="{{ car.giphyUrl }}" alt="{{ car.name }}" />
+        <h3 mat-line>{{ car.name }}</h3>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
+</mat-card>
