--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,9 +1,5 @@
-<h2>Car List</h2>
-
-<div *ngFor="let car of cars">{{ car.name }}</div>
-
 <mat-card>
-  <mat-title>Car List</mat-title>
+  <mat-card-title>Car List</mat-card-title>
   <mat-card-content>
     <mat-list>
       <mat-list-item *ngFor="let car of cars">
