--- a/src/app/car-edit/car-edit.component.html
+++ b/src/app/car-edit/car-edit.component.html
@@ -6,7 +6,7 @@
       >
     </mat-card-header>
     <mat-card-content>
-      <input type="hidden" name="href" [(ngModel)]="car.href" />
+      <input type="hidden" name="id" [(ngModel)]="car.id" />
       <mat-form-field>
         <input
           matInput
@@ -30,8 +30,8 @@
       <button
         mat-raised-button
         color="secondary"
-        (click)="remove(car.href)"
-        *ngIf="car.href"
+        (click)="remove(car.id)"
+        *ngIf="car.id"
         type="button"
       >
         Delete
